--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,3 +1,7 @@
+AuthType Basic
+AuthName "Some Name"
+AuthUserFile /usr/home/testing_ground/.htpasswd
+require valid-user 
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
